--- a/pppppp/View/Base.lproj/Main.storyboard
+++ b/pppppp/View/Base.lproj/Main.storyboard
@@ -988,7 +988,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YX6-i7-2q8">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="284" width="414" height="612"/>
                                 <color key="backgroundColor" red="0.070588235289999995" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dfj-iJ-ePl">
                                     <size key="itemSize" width="128" height="128"/>
@@ -1013,8 +1013,8 @@
                         <constraints>
                             <constraint firstItem="YX6-i7-2q8" firstAttribute="leading" secondItem="ziu-yi-aC7" secondAttribute="leading" id="2Uv-yw-bbl"/>
                             <constraint firstItem="ziu-yi-aC7" firstAttribute="trailing" secondItem="YX6-i7-2q8" secondAttribute="trailing" id="J7d-JE-6ZZ"/>
+                            <constraint firstItem="YX6-i7-2q8" firstAttribute="top" secondItem="ziu-yi-aC7" secondAttribute="top" constant="240" id="MBf-7q-u8x"/>
                             <constraint firstAttribute="bottom" secondItem="YX6-i7-2q8" secondAttribute="bottom" id="WBH-j6-roM"/>
-                            <constraint firstItem="YX6-i7-2q8" firstAttribute="top" secondItem="IQt-KT-YQa" secondAttribute="top" id="ZmZ-hU-qgh"/>
                         </constraints>
                     </view>
                     <connections>
